modify <a href 访问>

--- a/first.html
+++ b/first.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Hello Git</h1>
-	<a href="https://github.com/YQMCU/gh-pageTest.git/first.html">访问</a>
+	<a href="https://yqmcu.github.io/gh-pageTest/first.html">访问</a>
 </body>
 </html>
